tests/baselines/reference/computedPropertyNames46_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames46_ES5.ts(2,6): error TS2873: This kind of expression is always falsy.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames46_ES5.ts (1 errors) ====
    var o = {
        ["" || 0]: 0
         ~~
!!! error TS2873: This kind of expression is always falsy.
    };